--- a/views/companyManger.html
+++ b/views/companyManger.html
@@ -49,7 +49,7 @@
                     <ul>
                         <li>
                             <div class="line_content">
-                                <label>上级菜单：</label>
+                                <label>上级公司：</label>
                                 <div class="right">
                                     <input type="text" class="search_text"  readonly="readonly">
                                     <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel()"></button>
@@ -59,7 +59,7 @@
                         </li>
                         <li>
                             <div class="line_content">
-                                <label>名称：</label>
+                                <label>公司名称：</label>
                                 <div class="right">
                                     <input type="text" class="mnue_desc">
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
@@ -68,7 +68,7 @@
                         </li>
                         <li>
                             <div class="line_content">
-                                <label>链接：</label>
+                                <label>公司代码：</label>
                                 <div class="right">
                                     <input type="text" class="mnue_url">
                                 </div>
