--- a/public/css/tripRecord/companyManger.less
+++ b/public/css/tripRecord/companyManger.less
@@ -343,7 +343,7 @@ span.no-content{
   height: 5px;
   margin-right: 10px;
 }
-.mnue-manger-tree{
+.company-manger-tree{
   .modal-body{
     ul{
       list-style: none;
