地址管理基本框架完成

--- a/public/css/tripRecord/addressManger.less
+++ b/public/css/tripRecord/addressManger.less
@@ -343,7 +343,7 @@ span.no-content{
   height: 5px;
   margin-right: 10px;
 }
-.company-manger-tree{
+.address-manger-tree{
   .modal-body{
     ul{
       list-style: none;
