--- a/views/addressManger.html
+++ b/views/addressManger.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="/public/vendors/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
     <link rel="stylesheet" href="/public/css/admin.css">
-    <link rel="stylesheet" href="/public/css/tripRecord/companyManger.css">
+    <link rel="stylesheet" href="/public/css/tripRecord/addressManger.css">
     <script src="/public/vendors/nprogress/nprogress.js"></script>
 </head>
 <body>
 <script>NProgress.start()</script>
 <script type="text/javascript" id="template">{{dataJsonArr}}</script>
-<div class="company-manger main">
+<div class="address-manger main">
     <nav class="navbar">
         <button class="btn btn-default navbar-btn fa fa-bars"></button>
         <ul class="nav navbar-nav navbar-right">
@@ -23,25 +23,24 @@
     </nav>
     <div class="container-fluid">
         <div>
-            <ul class="nav nav-tabs company-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#mnue_list" id="company-list"  data-toggle="tab">公司列表</a></li>
-                <li role="presentation" ><a href="#mnue_add" id="company-add" data-toggle="tab">公司添加</a></li>
+            <ul class="nav nav-tabs address-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#mnue_list" id="address-list"  data-toggle="tab">地址列表</a></li>
+                <li role="presentation" ><a href="#mnue_add" id="address-add" data-toggle="tab">地址添加</a></li>
             </ul>
-            <div class="tab-content company-content">
+            <div class="tab-content address-content">
                 <div class="tab-pane active" id="mnue_list">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th>公司名称</th>
-                                <th>公司代码</th>
+                                <th>地址名称</th>
+                                <th>地址代码</th>
                                 <th>排序</th>
                                 <th>可见</th>
                                 <th>是否投资公司</th>
-                                <th>公司操作</th>
+                                <th>地址操作</th>
                             </tr>
                         </thead>
                         <tbody>
-
                         </tbody>
                     </table>
                 </div>
@@ -49,7 +48,7 @@
                     <ul>
                         <li>
                             <div class="line_content">
-                                <label>上级公司：</label>
+                                <label>上级地址：</label>
                                 <div class="right">
                                     <input type="text" class="search_text"  readonly="readonly">
                                     <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel()"></button>
@@ -59,7 +58,7 @@
                         </li>
                         <li>
                             <div class="line_content">
-                                <label>公司名称：</label>
+                                <label>地址名称：</label>
                                 <div class="right">
                                     <input type="text" class="mnue_desc">
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
@@ -68,7 +67,7 @@
                         </li>
                         <li>
                             <div class="line_content">
-                                <label>公司代码：</label>
+                                <label>地址代码：</label>
                                 <div class="right">
                                     <input type="text" class="mnue_url">
                                 </div>
@@ -92,7 +91,7 @@
     </ul>
 </div>
 <!-- Modal -->
-<div class="modal fade company-manger-tree" id="mnue_tree" tabindex="-1">
+<div class="modal fade address-manger-tree" id="mnue_tree" tabindex="-1">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -100,7 +99,7 @@
                 <h4 class="modal-title" id="myModalLabel">功能菜单</h4>
             </div>
             <div class="modal-body">
-                <ul class="company-manger-model">
+                <ul class="address-manger-model">
 
                 </ul>
             </div>
@@ -110,7 +109,7 @@
 <script src="/public/vendors/jquery/jquery.js"></script>
 <script src="/public/vendors/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/public/vendors/util/utils.js"></script>
-<script src="/public/js/bussnessTrip/companyManger.js"></script>
+<script src="/public/js/bussnessTrip/addressManger.js"></script>
 <script>NProgress.done()</script>
 </body>
 </html>
