完成公司选择模块

--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -118,7 +118,7 @@
                             <div class="right">
                                 <div class="content_input">
                                     <input type="text" id="end_company" readonly="readonly">
-                                    <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="searchCompany(this)"></button>
+                                    <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#company_tree" onclick="searchCompany(this)"></button>
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                                 </div>
                             </div>
