--- a/public/css/tripRecord/companyManger.less
+++ b/public/css/tripRecord/companyManger.less
@@ -86,6 +86,11 @@
                   border-radius: 3px 0 0 3px;
                   background-color: #f3f3f3;
                 }
+                input.mnue_address{
+                  border-right-width: 0;
+                  border-top-right-radius: 0;
+                  border-bottom-right-radius: 0;
+                }
                 button{
                   height: 25px;
                   float: left;
