--- a/public/css/tripRecord/companyManger.less
+++ b/public/css/tripRecord/companyManger.less
@@ -90,6 +90,7 @@
                   border-right-width: 0;
                   border-top-right-radius: 0;
                   border-bottom-right-radius: 0;
+                  background-color: #f3f3f3;
                 }
                 button{
                   height: 25px;
