--- a/views/companyManger.html
+++ b/views/companyManger.html
@@ -71,6 +71,7 @@
                                 <label>公司代码：</label>
                                 <div class="right">
                                     <input type="text" class="mnue_url">
+                                    <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                                 </div>
                             </div>
                         </li>
