--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -77,7 +77,7 @@
                             </div>
                             <div class="right" >
                                 <div class="content_input">
-                                    <input type="text" id="trip_start_time">
+                                    <input type="date" id="trip_start_time">
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                                 </div>
                             </div>
