订单记录完成

--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -90,7 +90,7 @@
                             </div>
                             <div class="right">
                                 <div class="content_input">
-                                    <input type="text" id="trip_end_time">
+                                    <input type="date" id="trip_end_time">
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                                 </div>
                             </div>
