公司界面显示地址

--- a/views/companyManger.html
+++ b/views/companyManger.html
@@ -35,7 +35,7 @@
                                 <th>公司名称</th>
                                 <th>公司代码</th>
                                 <th>排序</th>
-                                <th>可见</th>
+                                <th>公司地址</th>
                                 <th>是否投资公司</th>
                                 <th>公司操作</th>
                             </tr>
