--- a/public/css/tripRecord/companyManger.less
+++ b/public/css/tripRecord/companyManger.less
@@ -64,14 +64,15 @@
             border-bottom: 1px dashed #cccccc;
             .line_content{
               padding: 20px 0;
-              label{
+              height: 65px;
+              label.company_left{
                 float: left;
                 text-align: right;
                 width: 160px;
                 margin-right: 20px;
               }
               .right{
-                input{
+                input[type=text]{
                   height: 25px;
                   float: left;
                   border-width: 1px;
@@ -80,6 +81,9 @@
                   border-radius: 3px;
                   font-size: 12px;
                   padding-left: 5px;
+                }
+                input[type=radio]{
+                  margin: 0 5px 0 1px;
                 }
                 input.search_text{
                   border-right: none;
