--- a/views/companyManger.html
+++ b/views/companyManger.html
@@ -24,42 +24,44 @@
     <div class="container-fluid">
         <div>
             <ul class="nav nav-tabs company-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#mnue_list" id="company-list"  data-toggle="tab">公司列表</a></li>
-                <li role="presentation" ><a href="#mnue_add" id="company-add" data-toggle="tab">公司添加</a></li>
+                <li role="presentation" class="active"><a href="#mnue_list" id="company-list" data-toggle="tab">公司列表</a>
+                </li>
+                <li role="presentation"><a href="#mnue_add" id="company-add" data-toggle="tab">公司添加</a></li>
             </ul>
             <div class="tab-content company-content">
                 <div class="tab-pane active" id="mnue_list">
                     <table class="table table-bordered">
                         <thead>
-                            <tr>
-                                <th>公司名称</th>
-                                <th>公司代码</th>
-                                <th>排序</th>
-                                <th>公司地址</th>
-                                <th>是否投资公司</th>
-                                <th>公司操作</th>
-                            </tr>
+                        <tr>
+                            <th>公司名称</th>
+                            <th>公司代码</th>
+                            <th>排序</th>
+                            <th>公司地址</th>
+                            <th>是否投资公司</th>
+                            <th>公司操作</th>
+                        </tr>
                         </thead>
                         <tbody>
 
                         </tbody>
                     </table>
                 </div>
-                <div  class="tab-pane" id="mnue_add">
+                <div class="tab-pane" id="mnue_add">
                     <ul>
                         <li>
                             <div class="line_content">
-                                <label>上级公司：</label>
+                                <label class="company_left">上级公司：</label>
                                 <div class="right">
-                                    <input type="text" class="search_text"  readonly="readonly">
-                                    <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel(this)"></button>
+                                    <input type="text" class="search_text" readonly="readonly">
+                                    <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
+                                            data-target="#mnue_tree" onclick="mnueTreeInModel(this)"></button>
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="line_content">
-                                <label>公司名称：</label>
+                                <label class="company_left">公司名称：</label>
                                 <div class="right">
                                     <input type="text" class="mnue_desc">
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
@@ -68,7 +70,7 @@
                         </li>
                         <li>
                             <div class="line_content">
-                                <label>公司代码：</label>
+                                <label class="company_left">公司代码：</label>
                                 <div class="right">
                                     <input type="text" class="mnue_url">
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
@@ -77,12 +79,20 @@
                         </li>
                         <li>
                             <div class="line_content">
-                                <label>公司地址：</label>
+                                <label class="company_left">公司地址：</label>
                                 <div class="right">
                                     <input type="text" class="mnue_address" readonly="readonly">
                                     <input type="text" class="mnue_address_code" style="display: none">
-                                    <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="seachAddress(this)"></button>
+                                    <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
+                                            data-target="#mnue_tree" onclick="seachAddress(this)"></button>
                                     <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="line_content">
+                                <label class="company_left">公司类型：</label>
+                                <div class="right type_radio_group">
                                 </div>
                             </div>
                         </li>
@@ -108,7 +118,8 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
                 <h4 class="modal-title" id="myModalLabel">功能菜单</h4>
             </div>
             <div class="modal-body">
@@ -120,9 +131,23 @@
     </div>
 </div>
 <script src="/public/vendors/jquery/jquery.js"></script>
+<script src="/node_modules/art-template/lib/template-web.js"></script>
 <script src="/public/vendors/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/public/vendors/util/utils.js"></script>
 <script src="/public/js/bussnessTrip/companyManger.js"></script>
 <script>NProgress.done()</script>
+<script type="text/art-tempalte" id="company_type">
+      <% for(var i = 0;i<returnDate.length ;i++){%>
+        <%if(i == 0) {%>
+            <input type="radio" class="company_type_radios" id="radio<%= returnDate[i].is_tz %>" checked name="company_type" value="<%= returnDate[i].is_tz %>" />
+            <label for="radio<%= i %>" ><%= returnDate[i].company_type_desc %></label>
+        <% } else{%>
+            <input type="radio" class="company_type_radios" id="radio<%= returnDate[i].is_tz %>" name="company_type" value="<%= returnDate[i].is_tz %>" />
+             <label for="radio<%= i %>" ><%= returnDate[i].company_type_desc %></label>
+         <% } %>
+      <% } %>
+      <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
+
+</script>
 </body>
 </html>
