--- a/views/companyManger.html
+++ b/views/companyManger.html
@@ -37,7 +37,7 @@
                             <th>公司代码</th>
                             <th>排序</th>
                             <th>公司地址</th>
-                            <th>是否投资公司</th>
+                            <th>公司类型</th>
                             <th>公司操作</th>
                         </tr>
                         </thead>
