--- a/views/addressManger.html
+++ b/views/addressManger.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
     <link rel="stylesheet" href="/public/css/admin.css">
     <link rel="stylesheet" href="/public/css/tripRecord/addressManger.css">
+    <link rel="stylesheet" href="/public/css/load/load.css">
     <script src="/public/vendors/nprogress/nprogress.js"></script>
 </head>
 <body>
@@ -105,6 +106,9 @@
             </div>
         </div>
     </div>
+</div>
+<div class="mask">
+    <span class="glyphicon glyphicon-refresh loading"></span>
 </div>
 <script src="/public/vendors/jquery/jquery.js"></script>
 <script src="/public/vendors/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
