--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
     <link rel="stylesheet" href="/public/css/admin.css">
     <link rel="stylesheet" href="/public/css/tripRecord/tripRecord.css">
+    <link rel="stylesheet" href="/public/css/load/load.css">
     <script src="../public/vendors/nprogress/nprogress.js"></script>
     <script>
     </script>
@@ -151,6 +152,9 @@
             </div>
         </div>
     </div>
+</div>
+<div class="mask">
+    <span class="glyphicon glyphicon-refresh loading"></span>
 </div>
 <script src="../public/vendors/jquery/jquery.js"></script>
 <script src="../node_modules/art-template/lib/template-web.js"></script>
