--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Posts &laquo; Admin</title>
-  <link rel="stylesheet" href="/public/vendors/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="/public/css/load/load.css">
+  <link rel="stylesheet" href="/public/vendors/bootstrap-3.3.7-dist/css/bootstrap.css">
   <link rel="stylesheet" href="/public/vendors/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
   <link rel="stylesheet" href="../public/css/admin.css">
   <link rel="stylesheet" href="/public/css/tripRecord/bxManger.css">
+  <link rel="stylesheet" href="/public/css/load/load.css">
   <script src="../public/vendors/nprogress/nprogress.js"></script>
 </head>
 <body>
@@ -32,7 +32,7 @@
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
-            <!--<th class="text-center">出差单号</th>-->
+            <th class="text-center">出差单号</th>
             <th class="text-center">起始公司</th>
             <th class="text-center">目的公司</th>
             <th class="text-center">起始时间</th>
@@ -66,7 +66,7 @@
   <script type="text/art-template" id="ordersList">
     <% for(var i = 0;i<ordersJsonArray.length ;i++){ %>
         <tr>
-          <!--<td><%= ordersJsonArray[i].order_no %></td>-->
+          <td><a href="#"><%= ordersJsonArray[i].order_no %></a></td>
           <td class="text-center"><%= ordersJsonArray[i].startCompanyDesc %></td>
           <td class="text-center"><%= ordersJsonArray[i].endCompanyDesc %></td>
           <td class="text-center"><%= ordersJsonArray[i].start_date_str %></td>
