--- a/public/css/tripRecord/bxManger.less
+++ b/public/css/tripRecord/bxManger.less
@@ -7,4 +7,47 @@
       font-size: 13px !important;
     }
   }
+  .order-content{
+    .search_text{
+      padding: 15px;
+      background: #ffffff;
+      input{
+        padding: 3px;
+        border-radius: 1px;
+      }
+      #order-search{
+        margin-left: 5px;
+      }
+    }
+    .cost_type_list{
+      margin-top: 10px;
+      padding: 10px;
+      background: #ffffff;
+      .add{
+        background: lightgray;
+        margin-top: 20px;
+        border-radius: 5px;
+        text-align: center;
+        position: relative;
+        .add_font{
+          position: absolute;
+          left: 10px;
+          font-size: x-large;
+          color: white;
+          top:5px;
+        }
+        .add_text{
+          height: 35px;
+          line-height: 35px;
+          color: white;
+          font-weight: bold;
+          display: inline-block;
+        }
+      }
+      .add:hover{
+        background: lightblue;
+        cursor: pointer;
+      }
+    }
+  }
 }
