--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -54,7 +54,7 @@
         </div>
         <div class="tab-pane" id="order_modify">
             <div class="search_text">
-                出差单号：<input type="text" placeholder="请输入订单编号"/>
+                出差单号：<input type="text" placeholder="请输入订单编号" id="order-no"/>
               <button type="button" class="btn btn-info" id="order-search">查询</button>
             </div>
             <div class="cost_type_list">
