--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -23,7 +23,7 @@
     </nav>
     <div class="container-fluid">
       <div class="page-title">
-        <h1>费用类型管理</h1>
+        <h1>报销管理</h1>
       </div>
       <ul class="nav nav-tabs order-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#order_list" id="order-list" data-toggle="tab">订单列表</a>
