--- a/public/css/tripRecord/costType.less
+++ b/public/css/tripRecord/costType.less
@@ -19,34 +19,36 @@
         margin-left: 5px;
       }
     }
-    .cost_type_list{
-      margin-top: 10px;
-      padding: 10px;
-      background: #ffffff;
-      .add{
-        background: lightgray;
-        margin-top: 20px;
-        border-radius: 5px;
-        text-align: center;
-        position: relative;
-        .add_font{
-          position: absolute;
-          left: 10px;
-          font-size: x-large;
-          color: white;
-          top:5px;
+    .cost_modify {
+      .cost_type_list {
+        margin-top: 10px;
+        padding: 10px;
+        background: #ffffff;
+        .add {
+          background: lightgray;
+          margin-top: 20px;
+          border-radius: 5px;
+          text-align: center;
+          position: relative;
+          .add_font {
+            position: absolute;
+            left: 10px;
+            font-size: x-large;
+            color: white;
+            top: 5px;
+          }
+          .add_text {
+            height: 35px;
+            line-height: 35px;
+            color: white;
+            font-weight: bold;
+            display: inline-block;
+          }
         }
-        .add_text{
-          height: 35px;
-          line-height: 35px;
-          color: white;
-          font-weight: bold;
-          display: inline-block;
+        .add:hover {
+          background: lightblue;
+          cursor: pointer;
         }
-      }
-      .add:hover{
-        background: lightblue;
-        cursor: pointer;
       }
     }
   }
