--- a/public/css/tripRecord/costType.less
+++ b/public/css/tripRecord/costType.less
@@ -1,4 +1,4 @@
-.orders{
+.cost{
   table{
     th.text-center{
       font-weight: bold;
@@ -19,7 +19,7 @@
         margin-left: 5px;
       }
     }
-    .cost_modify {
+    #cost_modify {
       .cost_type_list {
         margin-top: 10px;
         padding: 10px;
