--- a/public/css/tripRecord/bxManger.less
+++ b/public/css/tripRecord/bxManger.less
@@ -48,6 +48,16 @@
         background: lightblue;
         cursor: pointer;
       }
+      .cost_type_list_items{
+        .list-group-item{
+            font-weight: bold;
+        }
+        .list-group-item:hover{
+          background: lightblue;
+          color: white;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
