--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -1,104 +1,119 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="utf-8">
-  <title>Posts &laquo; Admin</title>
-  <link rel="stylesheet" href="/public/vendors/bootstrap-3.3.7-dist/css/bootstrap.css">
-  <link rel="stylesheet" href="/public/vendors/font-awesome/css/font-awesome.css">
-  <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
-  <link rel="stylesheet" href="../public/css/admin.css">
-  <link rel="stylesheet" href="/public/css/tripRecord/bxManger.css">
-  <link rel="stylesheet" href="/public/css/load/load.css">
-  <script src="../public/vendors/nprogress/nprogress.js"></script>
+    <meta charset="utf-8">
+    <title>Posts &laquo; Admin</title>
+    <link rel="stylesheet" href="/public/vendors/bootstrap-3.3.7-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/public/vendors/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
+    <link rel="stylesheet" href="../public/css/admin.css">
+    <link rel="stylesheet" href="/public/css/tripRecord/bxManger.css">
+    <link rel="stylesheet" href="/public/css/load/load.css">
+    <script src="../public/vendors/nprogress/nprogress.js"></script>
 </head>
 <body>
-  <script>NProgress.start()</script>
-  <div class="orders main">
+<script>NProgress.start()</script>
+<div class="orders main">
     <nav class="navbar">
-      <button class="btn btn-default navbar-btn fa fa-bars"></button>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="../admin/profile.html"><i class="fa fa-user"></i>个人中心</a></li>
-        <li><a href="login.html"><i class="fa fa-sign-out"></i>退出</a></li>
-      </ul>
+        <button class="btn btn-default navbar-btn fa fa-bars"></button>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="../admin/profile.html"><i class="fa fa-user"></i>个人中心</a></li>
+            <li><a href="login.html"><i class="fa fa-sign-out"></i>退出</a></li>
+        </ul>
     </nav>
     <div class="container-fluid">
-      <div class="page-title">
-        <h1>报销管理</h1>
-      </div>
-      <ul class="nav nav-tabs order-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#order_list" id="order-list" data-toggle="tab">订单列表</a>
-        </li>
-        <li role="presentation"><a href="#order_modify" id="order-modify" data-toggle="tab">订单修改</a></li>
-      </ul>
-      <div class="tab-content order-content">
-        <div class="tab-pane active" id="order_list">
-          <div class="page-action">
-            <ul class="pagination pagination-sm pull-right pages-nav">
-            </ul>
-          </div>
-          <table class="table table-striped table-bordered table-hover">
-        <thead>
-          <tr>
-            <th class="text-center">出差单号</th>
-            <th class="text-center">起始公司</th>
-            <th class="text-center">目的公司</th>
-            <th class="text-center">起始时间</th>
-            <th class="text-center">结束公司</th>
-            <th class="text-center">出差天数</th>
-            <th class="text-center" width="100">订单修改</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
+        <div class="page-title">
+            <h1>报销管理</h1>
         </div>
-        <div class="tab-pane" id="order_modify">
-            <div class="search_text">
-                出差单号：<input type="text" placeholder="请输入订单编号" id="order-no"/>
-              <button type="button" class="btn btn-info" id="order-search">查询</button>
+        <ul class="nav nav-tabs order-tabs" role="tablist">
+            <li role="presentation" class="active"><a href="#order_list" id="order-list" data-toggle="tab">订单列表</a>
+            </li>
+            <li role="presentation"><a href="#order_modify" id="order-modify" data-toggle="tab">订单修改</a></li>
+        </ul>
+        <div class="tab-content order-content">
+            <div class="tab-pane active" id="order_list">
+                <div class="page-action">
+                    <ul class="pagination pagination-sm pull-right pages-nav">
+                    </ul>
+                </div>
+                <table class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th class="text-center">出差单号</th>
+                        <th class="text-center">起始公司</th>
+                        <th class="text-center">目的公司</th>
+                        <th class="text-center">起始时间</th>
+                        <th class="text-center">结束公司</th>
+                        <th class="text-center">出差天数</th>
+                        <th class="text-center" width="100">订单修改</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
             </div>
-            <div class="cost_type_list">
-              <div type="button" class="add">
-                <span class="add_font glyphicon glyphicon-plus"></span>
-                <span class="add_text">添加记录</span>
-              </div>
+            <div class="tab-pane" id="order_modify">
+                <div class="search_text">
+                    出差单号：<input type="text" placeholder="请输入订单编号" id="order-no"/>
+                    <button type="button" class="btn btn-info" id="order-search">查询</button>
+                </div>
+                <div class="cost_type_list">
+                    <div class="cost_type_list_items"></div>
+                    <div type="button" class="add">
+                        <span class="add_font glyphicon glyphicon-plus"></span>
+                        <span class="add_text">添加记录</span>
+                    </div>
+                </div>
             </div>
-       </div>
+        </div>
     </div>
-  </div>
-  <div class="aside">
-    <div class="profile">
-      <img class="avatar">
-      <h3 class="name"></h3>
+    <div class="aside">
+        <div class="profile">
+            <img class="avatar">
+            <h3 class="name"></h3>
+        </div>
+        <ul class="nav">
+        </ul>
     </div>
-    <ul class="nav">
-    </ul>
-  </div>
-  <div class="mask">
-    <span class="glyphicon glyphicon-refresh loading"></span>
-  </div>
-  <script src="../public/vendors/jquery/jquery.js"></script>
-  <script src="/node_modules/art-template/lib/template-web.js"></script>
-  <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
-  <script src="/public/vendors/util/utils.js"></script>
-  <script src="/public/js/bussnessTrip/bxManger.js"></script>
-  <script type="text/javascript" id="template">{{dataJsonArr}}</script>
-  <script type="text/art-template" id="ordersList">
-    <% for(var i = 0;i<ordersJsonArray.length ;i++){ %>
-        <tr>
-          <td><a href="#"><%= ordersJsonArray[i].order_no %></a></td>
-          <td class="text-center"><%= ordersJsonArray[i].startCompanyDesc %></td>
-          <td class="text-center"><%= ordersJsonArray[i].endCompanyDesc %></td>
-          <td class="text-center"><%= ordersJsonArray[i].start_date_str %></td>
-          <td class="text-center"><%= ordersJsonArray[i].end_date_str %></td>
-          <td class="text-center"><%= ordersJsonArray[i].totalDay %></td>
-          <td class="text-center">
-            <a href="javascript:;" class="btn btn-default btn-xs order_edit" data-no="<%= ordersJsonArray[i].order_no %>">编辑</a>
-            <a href="javascript:;" class="btn btn-danger btn-xs order_delete" data-no="<%= ordersJsonArray[i].order_no %>">删除</a>
-          </td>
-        </tr>
-    <% } %>
-  </script>
-  <script>NProgress.done()</script>
+    <div class="mask">
+        <span class="glyphicon glyphicon-refresh loading"></span>
+    </div>
+    <script src="../public/vendors/jquery/jquery.js"></script>
+    <script src="/node_modules/art-template/lib/template-web.js"></script>
+    <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
+    <script src="/public/vendors/util/utils.js"></script>
+    <script src="/public/js/bussnessTrip/bxManger.js"></script>
+    <script type="text/javascript" id="template">{{dataJsonArr}}</script>
+    <script type="text/art-template" id="ordersList">
+        <% for(var i = 0;i
+        <ordersJsonArray.length ;i++){ %>
+            <tr>
+                <td><a href="#"><%= ordersJsonArray[i].order_no %></a></td>
+                <td class="text-center"><%= ordersJsonArray[i].startCompanyDesc %></td>
+                <td class="text-center"><%= ordersJsonArray[i].endCompanyDesc %></td>
+                <td class="text-center"><%= ordersJsonArray[i].start_date_str %></td>
+                <td class="text-center"><%= ordersJsonArray[i].end_date_str %></td>
+                <td class="text-center"><%= ordersJsonArray[i].totalDay %></td>
+                <td class="text-center">
+                    <a href="javascript:;" class="btn btn-default btn-xs order_edit"
+                       data-no="<%= ordersJsonArray[i].order_no %>">编辑</a>
+                    <a href="javascript:;" class="btn btn-danger btn-xs order_delete"
+                       data-no="<%= ordersJsonArray[i].order_no %>">删除</a>
+                </td>
+            </tr>
+            <% } %>
+    </script>
+    <script type="text/art-template" id="ordersListItems">
+        <ul class="list-group">
+            <% if(returnData){ %>
+            <% for(var i = 0;i<returnData.length ;i++){ %>
+                <li class="list-group-item" data-toggle="modal" data-target="#trip_modal"><%= returnData[i].costDesc%>：<%=
+                    returnData[i].amount%>元
+                </li>
+                <% } %>
+                <% } %>
+        </ul>
+    </script>
+    <script>NProgress.done()</script>
 </body>
 </html>
