--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -78,6 +78,21 @@
     <div class="mask">
         <span class="glyphicon glyphicon-refresh loading"></span>
     </div>
+    <div class="modal fade order-manger-tree" id="order_tree" tabindex="-1">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" >订单费用修改</h4>
+                </div>
+                <div class="modal-body">
+                    <ul class="company-manger-model">
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="../public/vendors/jquery/jquery.js"></script>
     <script src="/node_modules/art-template/lib/template-web.js"></script>
     <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
@@ -107,7 +122,7 @@
         <ul class="list-group">
             <% if(returnData){ %>
             <% for(var i = 0;i<returnData.length ;i++){ %>
-                <li class="list-group-item" data-toggle="modal" data-target="#trip_modal"><%= returnData[i].costDesc%>：<%=
+                <li class="list-group-item" data-toggle="modal" data-target="#order_tree"><%= returnData[i].costDesc%>：<%=
                     returnData[i].amount%>元
                 </li>
                 <% } %>
