--- a/public/css/tripRecord/costType.less
+++ b/public/css/tripRecord/costType.less
@@ -8,18 +8,43 @@
     }
   }
   .cost-content{
-    .search_text{
-      padding: 15px;
-      background: #ffffff;
-      input{
-        padding: 3px;
-        border-radius: 1px;
-      }
-      #cost-search{
-        margin-left: 5px;
-      }
-    }
     #cost_modify {
+      #cost-search{
+        display: inline-block;
+        float: left;
+        margin-top: 10px;
+      }
+      .text-content{
+        float: left;
+      }
+      .search_text_div{
+        padding: 15px;
+        background: #ffffff;
+        display: inline-block;
+        line-height: 25px;
+        float: left;
+        input.search_text {
+          height: 25px;
+          float: left;
+          border-width: 1px;
+          border-style: solid;
+          border-color: #cccccc;
+          font-size: 12px;
+          padding-left: 5px;
+          border-right: none;
+          border-radius: 3px 0 0 3px;
+          background-color: #f3f3f3;
+        }
+        button.search_btn {
+          height: 25px;
+          float: left;
+          top: 0px;
+          background-color: #fff;
+          padding: 0;
+          border: 1px solid #cccccc;
+          width: 40px;
+        }
+      }
       .cost_type_list {
         margin-top: 10px;
         padding: 10px;
