--- a/views/costType.html
+++ b/views/costType.html
@@ -50,16 +50,33 @@
                 </table>
             </div>
             <div class="tab-pane" id="cost_modify">
-                <div class="search_text">
-                    出差单号：<input type="text" placeholder="请输入订单编号" id="cost-no"/>
+                <div style="background:#ffffff;" class="clearfix">
+                    <div class="search_text_div">
+                        <sapn class="text-content">费用类型：</sapn>
+                        <input type="text" class="search_text" readonly="readonly">
+                        <input style="display: none" id="cost_type_code" readonly="readonly">
+                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel(this)"></button>
+                    </div>
+                    <div class="search_text_div">
+                        <sapn class="text-content">公司类型：</sapn>
+                        <input type="text" class="search_text" readonly="readonly">
+                        <input style="display: none" type="text" id="company_type_code" readonly="readonly">
+                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel(this)"></button>
+                    </div>
+                    <div class="search_text_div">
+                        <sapn class="text-content">职级：</sapn>
+                        <input type="text" class="search_text" readonly="readonly">
+                        <input style="display: none" type="text" id="level_code" readonly="readonly">
+                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel(this)"></button>
+                    </div>
                     <button type="button" class="btn btn-info" id="cost-search">查询</button>
                 </div>
                 <div class="cost_type_list">
-                    <div type="button" class="add">
-                        <span class="add_font glyphicon glyphicon-plus"></span>
-                        <span class="add_text">添加记录</span>
-                    </div>
+                <div type="button" class="add">
+                    <span class="add_font glyphicon glyphicon-plus"></span>
+                    <span class="add_text">添加记录</span>
                 </div>
+            </div>
             </div>
         </div>
     </div>
@@ -87,7 +104,7 @@
                 <td class="text-center"><%= costTypeJsonArray[i].costTypeDesc %></td>
                 <td class="text-center"><%= costTypeJsonArray[i].ceilCost %></td>
                 <td class="text-center">
-                    <a href="javascript:;" class="btn btn-default btn-xs cost_type_edit">编辑</a>
+                    <a href="javascript:;" class="btn btn-default btn-xs cost_type_edit" data-code="<%= costTypeJsonArray[i].costTypeDesc %>@<%= costTypeJsonArray[i].companyTypeCode %>@<%= costTypeJsonArray[i].level %>">编辑</a>
                     <a href="javascript:;" class="btn btn-danger btn-xs cost_type_delete"
                        data-no="<%= costTypeJsonArray[i].costTypeCode %>">删除</a>
                 </td>
